# super-members

./: .replit  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
attached_assets/: Pasted--extracting-sha256-ee7d78be1eb92caf6ae84fc3af736b23eca018d5dedc967ae5bdee6d7082403b--1743589644118.txt
backend/: main.py
backend/config/: settings.py
backend/core/config/: settings.py  wsgi.py
backend/core/tenant/: models.py
backend/courses/: models.py
backend/courses/models/: Course.py  Module.py  __init__.py
backend/subscriptions/: models.py
backend/tenant/: models.py
backend/users/: models.py
config/: settings.py
frontend/src/: App.tsx  index.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/student/: Dashboard.tsx
frontend/src/services/: api.ts
users/: models.py
