[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "channels>=4.2.2",
    "django>=5.1.7",
    "django-cors-headers>=4.7.0",
    "django-tenants>=3.7.0",
    "djangorestframework>=3.16.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
]
